product_docs/docs/mongo_data_adapter/5.2.8/04_installing_the_mongo_data_adapter.mdx
---
title: "Installing the MongoDB Foreign Data Wrapper"
---

<div id="installing_the_mongo_data_adapter" class="registered_link"></div>


The MongoDB Foreign Data Wrapper can be installed with an RPM package. During the installation process, the installer will satisfy software prerequisites.

<div id="using_an_rpm_package_to_install_the_data_adapter" class="registered_link"></div>

## Installing the MongoDB Foreign Data Wrapper using an RPM Package

You can install the MongoDB Foreign Data Wrapper using an RPM package on the following platforms:

-   [RHEL 7](#rhel7)
-   [RHEL 8](#rhel8)
-   [CentOS 7](#centos7)
-   [CentOS 8](#centos8)

<div id="rhel7" class="registered_link"></div>

### On RHEL 7

Before installing the MongoDB Foreign Data Wrapper, you must install the following prerequisite packages, and request credentials from EDB:

Install the `epel-release` package:

> ``` text
> yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
> ```

Enable the optional, extras, and HA repositories:

> ``` text
> subscription-manager repos --enable "rhel-*-optional-rpms" --enable "rhel-*-extras-rpms"  --enable "rhel-ha-for-rhel-*-server-rpms"
> ```

You must also have credentials that allow access to the EDB repository. For information about requesting credentials, visit:

> <https://info.enterprisedb.com/rs/069-ALB-339/images/Repository%20Access%2004-09-2019.pdf>

After receiving your repository credentials:

1.  Create the repository configuration file.
2.  Modify the file, providing your user name and password.
3.  Install `edb-as<xx>-mongo_fdw`.

**Creating a Repository Configuration File**

To create the repository configuration file, assume superuser privileges, and invoke the following command:

> ``` text
> yum -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
> ```

The repository configuration file is named `edb.repo`. The file resides in `/etc/yum.repos.d`.

**Modifying the file to provide your user name and password**

After creating the `edb.repo` file, use your choice of editor to ensure that the value of the `enabled` parameter is `1`, and replace the `username` and `password` placeholders in the `baseurl` specification with the name and password of a registered EDB user.

> ``` text
> [edb]
> name=EnterpriseDB RPMs $releasever - $basearch
> baseurl=https://<username>:<password>@yum.enterprisedb.com/edb/redhat/rhel-$releasever-$basearch
> enabled=1
> gpgcheck=1
> gpgkey=file:///etc/pki/rpm-gpg/ENTERPRISEDB-GPG-KEY
> ```

**Installing the MongoDB Foreign Data Wrapper**

After saving your changes to the configuration file, use the following command to install the MongoDB Foreign Data Wrapper:

> ``` 
> yum install edb-as<xx>-mongo_fdw
> ```

where <span class="title-ref">xx</span> is the server version number.

When you install an RPM package that is signed by a source that is not recognized by your system, yum may ask for your permission to import the key to your local server. If prompted, and you are satisfied that the packages come from a trustworthy source, enter `y`, and press `Return` to continue.

During the installation, yum may encounter a dependency that it cannot resolve. If it does, it will provide a list of the required dependencies that you must manually resolve.

<div id="rhel8" class="registered_link"></div>

### On RHEL 8



Before installing the MongoDB Foreign Data Wrapper, you must install the following prerequisite packages, and request credentials from EDB:

Install the `epel-release` package:

> ``` text
> dnf -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
> ```

Enable the `codeready-builder-for-rhel-8-\*-rpms` repository:

> ``` text
> ARCH=$( /bin/arch )
> subscription-manager repos --enable "codeready-builder-for-rhel-8-${ARCH}-rpms"
> ```

You must also have credentials that allow access to the EDB repository. For information about requesting credentials, visit:

> <https://info.enterprisedb.com/rs/069-ALB-339/images/Repository%20Access%2004-09-2019.pdf>

After receiving your repository credentials:

1.  Create the repository configuration file.
2.  Modify the file, providing your user name and password.
3.  Install `edb-as<xx>-mongo_fdw`.

**Creating a Repository Configuration File**

To create the repository configuration file, assume superuser privileges, and invoke the following command:

> ``` text
> dnf -y https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
> ```

The repository configuration file is named `edb.repo`. The file resides in `/etc/yum.repos.d`.

**Modifying the file to provide your user name and password**

After creating the `edb.repo` file, use your choice of editor to ensure that the value of the `enabled` parameter is `1`, and replace the `username` and `password` placeholders in the `baseurl` specification with the name and password of a registered EDB user.

> ``` text
> [edb]
> name=EnterpriseDB RPMs $releasever - $basearch
> baseurl=https://<username>:<password>@yum.enterprisedb.com/edb/redhat/rhel-$releasever-$basearch
> enabled=1
> gpgcheck=1
> gpgkey=file:///etc/pki/rpm-gpg/ENTERPRISEDB-GPG-KEY
> ```

**Installing the MongoDB Foreign Data Wrapper**

After saving your changes to the configuration file, use the following command to install the MongoDB Foreign Data Wrapper:

> ``` text
> dnf install edb-as<xx>-mongo_fdw
> ```

When you install an RPM package that is signed by a source that is not recognized by your system, yum may ask for your permission to import the key to your local server. If prompted, and you are satisfied that the packages come from a trustworthy source, enter `y`, and press `Return` to continue.

During the installation, yum may encounter a dependency that it cannot resolve. If it does, it will provide a list of the required dependencies that you must manually resolve.

<div id="centos7" class="registered_link"></div>

### On CentOS 7



Before installing the MongoDB Foreign Data Wrapper, you must install the following prerequisite packages, and request credentials from EDB:

Install the `epel-release` package:

> ``` text
> yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
> ```

<div class="note">

<div class="title">

Note

</div>

You may need to enable the `[extras]` repository definition in the `CentOS-Base.repo` file (located in `/etc/yum.repos.d`).

</div>

You must also have credentials that allow access to the EDB repository. For information about requesting credentials, visit:

> <https://info.enterprisedb.com/rs/069-ALB-339/images/Repository%20Access%2004-09-2019.pdf>

After receiving your repository credentials you can:

1.  Create the repository configuration file.
2.  Modify the file, providing your user name and password.
3.  Install `edb-as<xx>-mongo_fdw`.

**Creating a Repository Configuration File**

To create the repository configuration file, assume superuser privileges, and invoke the following command:

> ``` text
> yum -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
> ```

The repository configuration file is named `edb.repo`. The file resides in `/etc/yum.repos.d`.

**Modifying the file to provide your user name and password**

After creating the `edb.repo` file, use your choice of editor to ensure that the value of the `enabled` parameter is `1`, and replace the `username` and `password` placeholders in the `baseurl` specification with the name and password of a registered EDB user.

> ``` text
> [edb]
> name=EnterpriseDB RPMs $releasever - $basearch
> baseurl=https://<username>:<password>@yum.enterprisedb.com/edb/redhat/rhel-$releasever-$basearch
> enabled=1
> gpgcheck=1
> gpgkey=file:///etc/pki/rpm-gpg/ENTERPRISEDB-GPG-KEY
> ```

**Installing the MongoDB Foreign Data Wrapper**

After saving your changes to the configuration file, use the following command to install the MongoDB Foreign Data Wrapper:

> ``` text
> yum install edb-as<xx>-mongo_fdw
> ```

where <span class="title-ref">xx</span> is the server version number.

When you install an RPM package that is signed by a source that is not recognized by your system, yum may ask for your permission to import the key to your local server. If prompted, and you are satisfied that the packages come from a trustworthy source, enter `y`, and press `Return` to continue.

During the installation, yum may encounter a dependency that it cannot resolve. If it does, it will provide a list of the required dependencies that you must manually resolve.

<div id="centos8" class="registered_link"></div>

### On CentOS 8



Before installing the MongoDB Foreign Data Wrapper, you must install the following prerequisite packages, and request credentials from EDB:

Install the `epel-release` package:

> ``` text
> dnf -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
> ```

Enable the `PowerTools` repository:

> ``` text
> dnf config-manager --set-enabled PowerTools
> ```

You must also have credentials that allow access to the EDB repository. For information about requesting credentials, visit:

> <https://info.enterprisedb.com/rs/069-ALB-339/images/Repository%20Access%2004-09-2019.pdf>

After receiving your repository credentials:

1.  Create the repository configuration file.
2.  Modify the file, providing your user name and password.
3.  Install `edb-as<xx>-mongo_fdw`.

**Creating a Repository Configuration File**

To create the repository configuration file, assume superuser privileges, and invoke the following command:

> ``` text
> dnf -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
> ```

The repository configuration file is named `edb.repo`. The file resides in `/etc/yum.repos.d`.

**Modifying the file to provide your user name and password**

After creating the `edb.repo` file, use your choice of editor to ensure that the value of the `enabled` parameter is `1`, and replace the `username` and `password` placeholders in the `baseurl` specification with the name and password of a registered EDB user.

> ``` text
> [edb]
> name=EnterpriseDB RPMs $releasever - $basearch
> baseurl=https://<username>:<password>@yum.enterprisedb.com/edb/redhat/rhel-$releasever-$basearch
> enabled=1
> gpgcheck=1
> gpgkey=file:///etc/pki/rpm-gpg/ENTERPRISEDB-GPG-KEY
> ```

**Installing the MongoDB Foreign Data Wrapper**

After saving your changes to the configuration file, use the following command to install the MongoDB Foreign Data Wrapper:

> ``` text
> dnf install edb-as<xx>-mongo_fdw
> ```

where <span class="title-ref">xx</span> is the server version number.

When you install an RPM package that is signed by a source that is not recognized by your system, yum may ask for your permission to import the key to your local server. If prompted, and you are satisfied that the packages come from a trustworthy source, enter `y`, and press `Return` to continue.

During the installation, yum may encounter a dependency that it cannot resolve. If it does, it will provide a list of the required dependencies that you must manually resolve.

## Installing the MongoDB Foreign Data Wrapper on a Debian or Ubuntu Host





To install the MongoDB Foreign Data Wrapper on a Debian or Ubuntu host, you must have credentials that allow access to the EDB repository. To request credentials for the repository, visit the [EDB website](https://www.enterprisedb.com/repository-access-request/).

The following steps will walk you through using the EDB apt repository to install a Debian package. When using the commands, replace the `username` and `password` with the credentials provided by EDB.

1.  Assume superuser privileges:

    > ``` text
    > sudo su –
    > ```

2.  Configure the EDB repository:

    On Debian 9 and Ubuntu:

    > ``` text
    > sh -c 'echo "deb https://username:password@apt.enterprisedb.com/$(lsb_release -cs)-edb/ $(lsb_release -cs) main" > /etc/apt/sources.list.d/edb-$(lsb_release -cs).list'
    > ```

    On Debian 10:

    1.  Set up the EDB repository:

    > ``` text
    > sh -c 'echo "deb [arch=amd64] https://apt.enterprisedb.com/$(lsb_release -cs)-edb/ $(lsb_release -cs) main" > /etc/apt/sources.list.d/edb-$(lsb_release -cs).list'
    > ```

    1.  Substitute your EDB credentials for the `username` and `password` in the following command:

    > ``` text
    > sh -c 'echo "machine apt.enterprisedb.com login <username> password <password>" > /etc/apt/auth.conf.d/edb.conf'
    > ```

3.  Add support to your system for secure APT repositories:

    > ``` text
    > apt-get install apt-transport-https
    > ```

4.  Add the EDB signing key:

    > ``` text
    > wget -q -O - https://<username>:<password>@apt.enterprisedb.com/edb-deb.gpg.key | apt-key add -
    > ```

5.  Update the repository metadata:

    > ``` text
    > apt-get update
    > ```

6.  Install the Debian package:

    > ``` text
    > apt-get install edb-as<xx>-mongo-fdw
    > ```

where <span class="title-ref">xx</span> is the server version number.
